Working on the webapp structure, I've embedded tableau in html

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 
-<!-- {% from "components/card.html" import card %} -->
 {% from "components/header.html" import header %}
 {% block title %}Homepage{% endblock %}
 {% block content %}
@@ -8,10 +7,14 @@
     <div class="container">
       {{header()}}
     </div>
-    
-    
 
+    <body>
+      <img src="static/img/AF-bg.gif" alt="..." width="1296" height="524">
+      <p></p>
+    </body>
+     
 {% endblock %}
+
 
 
 
