--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,6 +19,11 @@
     <div class="container">
         <p></p>
         <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">Dashboard</h1>
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fa-solid fa-football" style="font-size:24px"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
         <p></p>
         <div class="row">
             <div class="container d-flex align-items-center flex-column"><p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
