--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -19,6 +19,11 @@
 <section class="page-section portfolio">
   <div class="container">
       <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">Prediction</h1>
+      <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon"><i class="fa-solid fa-football" style="font-size:24px"></i></div>
+        <div class="divider-custom-line"></div>
+      </div>
       <p></p>
       <!-- TABLEAU -->
       <div class='tableauPlaceholder' id='viz1659099158466' style='position: relative'>
