--- a/templates/about.html
+++ b/templates/about.html
@@ -21,6 +21,11 @@
     <div class="container">
         <p></p>
         <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">About this project</h1>
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fa-solid fa-football" style="font-size:24px"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
         <p></p>
         <div class="row">
             <p></p>
