update the front-end

--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -19,9 +19,9 @@
 <section class="page-section portfolio">
   <div class="container">
       <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">Prediction</h1>
-      <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon"><i class="fa-solid fa-football" style="font-size:24px"></i></div>
+      <div class="divider-custom divider-light">
+        <div class="divider-custom-line"><i></i></div>
+        <div class="divider-custom-icon"><i class="fa-solid fa-football" color="#b62126" style="font-size:24px"></i></div>
         <div class="divider-custom-line"></div>
       </div>
       <p></p>
