--- a/templates/about.html
+++ b/templates/about.html
@@ -21,9 +21,9 @@
     <div class="container">
         <p></p>
         <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">About this project</h1>
-        <div class="divider-custom">
-            <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fa-solid fa-football" style="font-size:24px"></i></div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"><i></i></div>
+            <div class="divider-custom-icon"><i class="fa-solid fa-football" color="#b62126" style="font-size:24px"></i></div>
             <div class="divider-custom-line"></div>
         </div>
         <p></p>
