update the front-end

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,7 +18,7 @@
 <section class="page-section">
     <div class="container">
         <p></p>
-        <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">Dashboard</h1>
+        <h1 class="masthead-heading text-center text-uppercase mb-0">Dashboard</h1>
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"><i></i></div>
             <div class="divider-custom-icon"><i class="fa-solid fa-football" color="#b62126" style="font-size:24px"></i></div>
