--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,9 @@
 /* CONTAINER  */
 
+.page-section-heading {
+  color: #b62024;
+}
+
 .container, .container-fluid, .container-xxl, .container-xl, .container-lg, .container-md, .container-sm {
   width: 100%;
   padding-right: var(--bs-gutter-x, 0.75rem);
@@ -89,7 +93,7 @@
   hr:not([size]) {
     height: 0.125rem;
   }
-  
+
   h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     margin-top: 0;
     margin-bottom: 0.5rem;
@@ -100,10 +104,12 @@
   
   h1, .h1 {
     font-size: calc(1.375rem + 1.5vw);
+    color: #b62024;
   }
   @media (min-width: 1200px) {
     h1, .h1 {
       font-size: 2.5rem;
+      color: #b62024;
     }
   }
   
