--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,7 @@
 </section>    
 <section class="page-section" id="contact">
     <div class="container">
-        <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">My Contacts</h1>
+        <h1 class="masthead-heading text-center text-uppercase mb-0">My Contacts</h1>
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"><i></i></div>
             <div class="divider-custom-icon"><i class="fa-solid fa-football" color="#b62126" style="font-size:24px"></i></div>
