--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -26,19 +26,18 @@
       </div>
       <p></p>
       <!-- TABLEAU -->
-      <div class='tableauPlaceholder' id='viz1659099158466' style='position: relative'>
+      <div class='tableauPlaceholder' id='viz1662389745058' style='position: relative'>
         <noscript>
           <a href='#'>
-            <img alt='NFL Combine ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;NF&#47;NFLCombine_1&#47;NFLCombine&#47;1_rss.png' style='border: none' />
+            <img alt='NFL Scatter Plots ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;Test_16621266216310&#47;NFLScatterPlots&#47;1_rss.png' style='border: none' />
           </a>
         </noscript>
         <object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-          <param name='embed_code_version' value='3' /> 
-          <param name='site_root' value='' />
-          <param name='name' value='NFLCombine_1&#47;NFLCombine' />
+          <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+          <param name='name' value='Test_16621266216310&#47;NFLScatterPlots' />
           <param name='tabs' value='no' />
           <param name='toolbar' value='yes' />
-          <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;NF&#47;NFLCombine_1&#47;NFLCombine&#47;1.png' /> 
+          <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;Test_16621266216310&#47;NFLScatterPlots&#47;1.png' /> 
           <param name='animate_transition' value='yes' />
           <param name='display_static_image' value='yes' />
           <param name='display_spinner' value='yes' />
@@ -46,13 +45,13 @@
           <param name='display_count' value='yes' />
           <param name='language' value='it-IT' />
         </object>
-      </div>                
-      <script type='text/javascript'>                    
-        var divElement = document.getElementById('viz1659099158466');                    
-        var vizElement = divElement.getElementsByTagName('object')[0];                    
-        vizElement.style.width='1000px';vizElement.style.height='827px';                    
-        var scriptElement = document.createElement('script');                    
-        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+      </div>
+      <script type='text/javascript'>
+        var divElement = document.getElementById('viz1662389745058');
+        var vizElement = divElement.getElementsByTagName('object')[0];
+        vizElement.style.width='1300px';vizElement.style.height='927px';
+        var scriptElement = document.createElement('script');
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
         vizElement.parentNode.insertBefore(scriptElement, vizElement);                
       </script>
       <p></p>
