--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -29,36 +29,36 @@
             <div class="container d-flex align-items-center flex-column"><p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
         </div>
             <!-- TABLEAU -->
-            <div class='tableauPlaceholder' id='viz1659018085153' style='position: relative'>
+
+            <div class='tableauPlaceholder' id='viz1662651333148' style='position: relative'>
                 <noscript>
                     <a href='#'>
-                        <img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerSupportCaseDemo&#47;CustomerSupportCases&#47;1_rss.png' style='border: none' />
+                        <img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Nf&#47;Nfldataanalysis&#47;NFLTeamOverview&#47;1_rss.png' style='border: none' />
                     </a>
                 </noscript>
                 <object class='tableauViz'  style='display:none;'>
                     <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
                     <param name='embed_code_version' value='3' /> 
                     <param name='site_root' value='' />
-                    <param name='name' value='CustomerSupportCaseDemo&#47;CustomerSupportCases' />
-                    <param name='tabs' value='no' />
+                    <param name='name' value='Nfldataanalysis&#47;NFLTeamOverview' />
+                    <param name='tabs' value='yes' />
                     <param name='toolbar' value='yes' />
-                    <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomerSupportCaseDemo&#47;CustomerSupportCases&#47;1.png' /> 
+                    <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Nf&#47;Nfldataanalysis&#47;NFLTeamOverview&#47;1.png' /> 
                     <param name='animate_transition' value='yes' />
                     <param name='display_static_image' value='yes' />
                     <param name='display_spinner' value='yes' />
                     <param name='display_overlay' value='yes' />
                     <param name='display_count' value='yes' />
                     <param name='language' value='it-IT' />
-                </object>
-            </div>                
-            <script type='text/javascript'>                    
-                var divElement = document.getElementById('viz1659018085153');                    
-                var vizElement = divElement.getElementsByTagName('object')[0];                    
-                vizElement.style.width='1296px';vizElement.style.height='847px';                    
-                var scriptElement = document.createElement('script');                    
-                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-                vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-            </script>
+                </object></div>                
+                <script type='text/javascript'>                    
+                    var divElement = document.getElementById('viz1662651333148');                    
+                    var vizElement = divElement.getElementsByTagName('object')[0];                    
+                    vizElement.style.minWidth='1400px';vizElement.style.maxWidth='2200px';vizElement.style.width='100%';vizElement.style.height='1650px';                    
+                    var scriptElement = document.createElement('script');                    
+                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+                </script>
         <p></p>
     </div>
 </section>
