updating images and text

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,25 +31,25 @@
             <p></p>
             <div class="col-lg-4 ms-auto">
                 <h5>The Idea</h5>
-                <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="lead">American football is a game characterized by high demands for strategy. From the players on the field to specific characteristics that change frequently throughout the game, it can be challenging to quantify the value of specific plays and actions within a play. This project focuses on two main lines. Firstly, analyzing the multiple data sources collected on football and offering an overview of what the data on teams from the 1960s to today is saying. Then, combining the collected data with Machine Learning algorithms and obtaining a prediction for the matches of the regular season 2022-2023.</p>
             </div>
-            <div class="col-lg-4 me-auto"><p class="lead"><img src="static/img/ball.svg" alt="..." width="400" height="400"></p></div>
+            <div class="col-lg-4 me-auto"><p class="lead"><img src="static/img/americanfootball.jpg" alt="..." width="400" height="400"></p></div>
             <p></p>
         </div>
         <div class="row">
-            <div class="col-lg-4 ms-auto"><p class="lead"><img src="static/img/ball.svg" alt="..." width="400" height="400"></p></div>
+            <div class="col-lg-4 ms-auto"><p class="lead"><img src="static/img/Data.jpeg" alt="..." width="400" height="400"></p></div>
             <div class="col-lg-4 me-auto">
                 <h5>Data Source</h5>
-                <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="lead">The datasets come from two sources. The first is the <a href="https://pypi.org/project/sportsreference/" target="_blank">Sportsreference</a> dataset. It contains the main outcomes of interest (yards gained on the play and play type) and contains rich features related to the situation of the game that may give some predictive power to what will happen in the play. For example, the features include the current score of the game and the yard line that the offensive team is on. The second source is <a href="https://fivethirtyeight.com/sports/" target="_blank">FiveThirtyEight</a> which contains forecasts based on 50,000 simulations of the season and updates after every game.</p>
             </div>
             <p></p>
         </div>
         <div class="row">
             <div class="col-lg-4 ms-auto">
-                <h5>The structure</h5>
-                <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h5>The Structure</h5>
+                <p class="lead">The project structure is divided into the back-end and front-end. As for the back-end work, Pandas, Matplotlib and Seaborn were used for data analysis; for prediction, Sklearn library with SVM and Adaboost algorithms. For the front-end work, a Flask application was created using HTLM and CSS; dashboards were built with Tableau to visualize the data.</p>
             </div>
-            <div class="col-lg-4 me-auto"><p class="lead"><img src="static/img/ball.svg" alt="..." width="400" height="400"></p></div>
+            <div class="col-lg-4 me-auto"><p class="lead"><img src="static/img/Structure.png" alt="..." width="400" height="400"></p></div>
         </div>
         <p></p>
     </div>
