--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,8 +32,10 @@
             <div class="col-lg-4 me-auto">
                 <h3>Andrea Viviani</h3>
                 <h5>Data Scientist | Product Manager</h5>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
+                <p class="lead">Business Analyst and Product Manager with a focus on strategic planning, financial analysis and business intelligence. My interests are closely aligned with Data Science, Deep and Machine Learning. Passionate and assertive, with experience in both startups and corporates, as well as capable of sharp executions coupled with relentless ambition and energy, which will enable the business to reach targets and goals.</p>
+                <p class="lead"><i class="fa-solid fa-envelope"></i> andrea.viviani89@gmail.com</p>
+                <p class="lead"><i class="fa-brands fa-linkedin"></i> in/vivianiandrea/</p>
+                <p class="lead"><i class="fa-brands fa-github"></i> /AndreaViviani89</p>
             </div>
         </div>
         <p></p>
