--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -55,37 +55,15 @@
           scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
           vizElement.parentNode.insertBefore(scriptElement, vizElement);                
         </script>
-
-
-
-      <div class='tableauPlaceholder' id='viz1662389745058' style='position: relative'>
-        <noscript>
-          <a href='#'>
-            <img alt='NFL Scatter Plots ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;Test_16621266216310&#47;NFLScatterPlots&#47;1_rss.png' style='border: none' />
-          </a>
-        </noscript>
-        <object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-          <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
-          <param name='name' value='Test_16621266216310&#47;NFLScatterPlots' />
-          <param name='tabs' value='no' />
-          <param name='toolbar' value='yes' />
-          <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Te&#47;Test_16621266216310&#47;NFLScatterPlots&#47;1.png' /> 
-          <param name='animate_transition' value='yes' />
-          <param name='display_static_image' value='yes' />
-          <param name='display_spinner' value='yes' />
-          <param name='display_overlay' value='yes' />
-          <param name='display_count' value='yes' />
-          <param name='language' value='it-IT' />
-        </object>
-      </div>
-      <script type='text/javascript'>
-        var divElement = document.getElementById('viz1662389745058');
-        var vizElement = divElement.getElementsByTagName('object')[0];
-        vizElement.style.width='1300px';vizElement.style.height='927px';
-        var scriptElement = document.createElement('script');
-        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-        vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-      </script>
       <p></p>
   </div>
+  <div class="row">
+    <div class="container d-flex align-items-center flex-column">
+      <p></p>  
+      <h2>First Week Prediction</h2>
+        <p></p>
+        <img class="masthead-avatar mb-5" src="static/img/Predic1Week.jpg" alt="..." width="1300" height="732"/>
+    </div>
+</div>
+<p></p>
 {% endblock %}
